--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Your App</string>
+    <string name ="blank"></string>
     <string name="appwidget_text">Search YourApp..</string>
     <string name="add_widget">Add widget</string>
 
